k8s/4_ingress/ingress-dev-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: mern-app-dev
spec:
  type: LoadBalancer
  selector:
    app: nginx-mern-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: nginx
