k8s/4_ingress/ingress-prd-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prd-nginx-service
  namespace: mern-app-prd
spec:
  type: LoadBalancer
  selector:
    app: nginx-mern-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: nginx
