k8s/4_ingress/ingress-prd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prd-ingress
  namespace: mern-app-prd
  labels:
    app: nginx-mern-app
spec:
  ingressClassName: nginx
  defaultBackend:
    resource:
      kind: path
      name: frontend-svc
  rules:
  - host: prd.myexampleapp.com
    http:
      paths:
      - pathType: Prefix
        path: "/api-docs"
        backend:
          service:
            name: backend-svc
            port:
              number: 8080
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: backend-svc
            port:
              number: 8080
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
